tests/diagnostics/return_value_mismatch.kal
# A `return` value must match the function's return type.
fn f() -> i64 = return 1.5;
